# genesis_path_follower

./: .gitignore  CMakeLists.txt  DiaryCPG_Nov2018.txt  DockerCheatSheet.txt  LICENSE  Notes.txt  README.md  Screenshot from 2018-11-05 13-18-14.jl  ToDo  make_error  package.xml
bags/: fast_lap_10ms_switch_bad_start_ending.txt  getTrainingData.py  get_mpc_messages_from_bag.py  gurobi_output_8_23_linlat_ctrl.txt  gurobi_output_8_23_linlat_ctrl_presolve_disabled.txt  info.txt  path_follow_2019-02-26-16-31-43.bag.active  path_follow_2019-02-26-16-42-26.bag.active  sim_path_follow_2018-11-07-13-46-42.bag.active  sim_path_follow_2018-11-09-01-43-35.bag.active  sim_path_follow_2018-11-09-16-09-24.bag.active
bags/CPG_Day5/: 20180326_AE PHEV_Berkeley_LocalCAN_r12_7.dbc
launch/: box_sort.launch  cpg.yaml  cpg_sim.yaml  path_follow.launch  path_follow_dyn.launch  path_record.launch  path_record_dyn.launch  rfs.yaml  rfs_3rd_run.yaml  sim_launch_bkcp  sim_path_follow.launch  sim_path_follow_cpg.launch  sim_path_follow_dyn.launch  sim_path_follow_pomdp.launch  thunderhill.yaml
msg/: command.msg  cur_state.msg  display_state.msg  mpc_path.msg  mpc_path_dyn.msg  mpc_path_dyn_frenet.msg  ped_state.msg  plotting_state.msg  prediction.msg  state_est.msg  state_est_dyn.msg  vehicle_state.msg
path_csvs/: acc_azera_gps_waypoints.csv  gps_path_v1.pkl  gps_path_v2.pkl
paths/: CPG_8_20_run1.mat  CPG_Day1TotalData_LatPrimNetMatlab.mat  CPG_day1_sim1_latTrainingDataVCnormalized.mat  CPG_day1_sim1_trainingData.mat  CPG_day1_sim2_latTrainingDataVCnormalized.mat  CPG_day1_sim2_trainingData.mat  NN_test.mat  NN_test_CPGDay1_RandDataLat10kTrafo2.mat  NN_test_CPGDay2BacktoDay1Tune_RandDataLat10kTrafo2.mat  NN_test_CPGDay2ParamMergeConRelaxed_RandDataLat10kTrafo2.mat  NN_test_CPGDay2ParamMerge_RandDataLat10kTrafo2.mat  NN_test_CPGDay3_N3RandDataLat10kTrafo2.mat  NN_test_CPGDay3_RandTrainingDataLong10k.mat  NN_test_CPGDay3_RandTrainingDataLong1k.mat  NN_test_CPGDay4_BadVCRandTrainingDataLat10k.mat  NN_test_CPGDay4_RandTrainingDataLong10k.mat  NN_test_CPGDay4_SmoothVCRandTrainingDataLat10k.mat  NN_test_CPGDay5_BadRandTrainingDataLat10k.mat  NN_test_RandtrainingDataLat_Trafo2.mat  NN_test_trainingData.mat  NN_test_trainingDataLatRFS.mat  NN_test_trainingDataLat_PrimalDual.mat  NN_test_trainingDataLong_PrimalDual.mat  NN_test_trainingData_PrimalDual.mat  NN_trainCode_Lat.m  NN_trainCode_Long.m  RFS_target.mat  comp_curv.py  comp_curv_opt.py  cpgOpen.mat  cpgSmooth.mat  cpgSmoothModifiedFriction.mat  cpgSmoothMoveAvgK.mat  cpg_clean.mat  cpg_clean_curv.mat  cpg_winding_track_edges.mat  cpgwinding.mat  cpgwinding2.mat  cpgwinding3.mat  cpgwinding4.mat  (+122 more)
paths/RFS_NNdata/: exp1.mat  exp2.mat  exp5.mat  exp6.mat
paths/goodNNs/: trained_weightsDualLong10k_CPGDay3.mat  trained_weightsDualLongBadV10k_CPGDay3.mat  trained_weightsDuallLongBadRand10kandOneTrajData_CPGDay4.mat  trained_weightsPrimalLongBadV1k_CPGDay3.mat  trained_weightsPrimalLongComplTrajData_CPGDay3.mat  trained_weightsPrimalLongSmoothRand10kandOneTrajData_CPGDay4_2Bp.mat  trained_weightsPrimalLongSmoothRand10kandTwoTrajData_CPGDay4_2Cp.mat  trained_weightsPrimalLongSmoothVRandData_CPGDay4.mat
paths/latNNNotWorking/: trained_weightsDualLatBadVCRand10kDataOneTraj_CPGDay4.mat  trained_weightsDualLatBadVCRand10kDataTwoTraj_CPGDay4.mat  trained_weightsDualLatBadVCRand10kData_CPGDay4.mat  trained_weightsPrimalLatBadVCRand10kData_CPGDay4.mat  trained_weightsPrimalLatSmoothVCRand10kData_CPGDay4.mat
paths/latNNandData/: NN_test_CPGDay1_RandDataLat10kTrafo2uncConstr.mat  trained_weightsPrimalLatBadRand10kData_TwoTraj_CPGDay5.mat  trained_weightsPrimalLatBadRand30kData_CPGDay5.mat  trained_weightsPrimalLatBadVCRand10kData_CPGDay5.mat
paths/longNNandData/: NN_test_CPGDay3_BadRandTrainingDataLong10k_1A.mat  trained_weightsDualLongBadV1k_CPGDay3.mat  trained_weightsDuallLongSmoothRand10kandOneTrajData_CPGDay4_2Bd.mat  trained_weightsPrimalLongBadV10k_CPGDay3_1Ap.mat  (+2 more)
scripts/: checkSpaceIndexing.jl  crosswalkController.py  crosswalkSimulator.py  gps_plotter.py  gps_plotter_dyn.py  gps_vehicle_plotter.py  gps_vehicle_plotter_dyn.py  lidarboxsort_nk.py  lk_cmd_pub.py  mpc_cmd_pub.jl  mpc_cmd_pub.py  mpc_cmd_pub_Frenet_Lin.jl  mpc_cmd_pub_Frenet_Lin_NN.jl  mpc_cmd_pub_dyn _Frenet_Lin.jl  mpc_cmd_pub_dyn.jl  mpc_cmd_pub_dyn_Frenet_Lin.jl  mpc_cmd_pub_dyn_v2.jl  pedXingPOMDP.jl  plotResultsLMPC.py  plotResultsLMPCcpg.py  simVisualizer.py  state_publisher.py  state_publisher_dyn.py  utils.py  vehicle_simulator.py  vehicle_simulator_dyn.py
(+64 files in other folders)
